--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'java'
     id 'nebula.release' version '4.1.0'
+    id 'nebula.maven-base-publish' version '4.9.1'
+    id 'nebula.maven-resolved-dependencies' version '4.9.1'
+    id 'nebula.javadoc-jar' version '4.9.1'
+    id 'nebula.source-jar' version '4.9.1'
 }
 
 sourceCompatibility = '1.8'
